	    + The PTR record (host name) is in '$_REQUEST["hostname"]', not '$_REQUEST["dest"]'!
	    + Be smarter when setting up the reverse/in-addr.arpa entry from IP address.
	  - I can't ever remember which is which when creating a PTR record, so allow IP/Hostname
	    to be set in any of the Source/Destination inputs of bind9_add.php.

	GUI layout changes
	  - Don't show the Kerberos info in the user add details page if KERBEROS isn't an option
	    to choose from.
	  - Don't output the '@' separator between recipient part and email domain if there IS no
	    domain to output in the user add details page.
	  - Change wording of 'Miscellaneous' in tables/domain_details-owner.inc to 'Additional information'
	    which is ... better.
	  - When adding a webserver or DNS domain to a domain/branch, offer to update additionalDomainName
	    and QLC object(s).
	    + 'Update QLC object(s)' checked by default.
	    + Change 'Create DNS object' to checked by default.

	Misc changes
	  - Prettier debug output in include/pql_search.inc:pql_search()

phpQLAdmin 2.3.5 Dec  2 2006
	Bug fixes
	  - Correctly verify user (different depending on what PQL_CONF_REFERENCE_USERS_WITH
	    is set to - uid or sn).
	  - pql_format_error_span() needs to be prefixed/called with 'echo' to get any
	    output.
	  - Faulty include/attrib.dnszone.inc:attribute_translate_type(). Tried to verify
	    $_REQUEST["attrib"] instead of param to function ('$attrib').
	  - Form value 'type' was overwritten by a hidden input in include/attrib.dnszone.inc:attribute_print_form().
	  - The pql_search() might return a 'flat' array in include/pql_bind9.inc:pql_bind9_update_serial(),
	    therefor check both 'is_array($object[0])' AND 'is_array($object)'.
	  - Setup missing $_REQUEST["view"] value _before_ any pql_generate_button().
	  - Send '&mark=yes' to tools/navbutton.php IF the button is mentioned in $_REQUEST["view"].
	  - In tools/navbutton.php, make the text red if called with the 'mark' value.